# LoveSpace

./: LOVESPACE_HANDOVER.md  TRANSFORMATION_COMPLETE.md  pyproject.toml
legacy/axiom/: start.py
legacy/axiom/backend/: main.py
legacy/axiom/backend/api/: messages.py  sessions.py
legacy/axiom/backend/core/: anthropic_client.py  contracts.py  session_manager.py
legacy/axiom/backend/tools/: executor.py  parser.py
legacy/axiom/src/axiom/: __init__.py  anthropic_client.py  cli.py  contracts.py
legacy/axiom/tests/: test_anthropic_client.py  test_contracts.py
projects/development/om/: benchmark_runner.py  demo_agent_scoping.py
projects/development/om/setup/: commercial_installer.py
projects/development/om/src/om/: __init__.py  agent_scoping.py  analysis.py  cli.py  cli_reference.py  coherent_api.py  coherent_file_updater.py  coordination_scaffolding.py  coverage_commands.py  coverage_enforcement.py  deployment.py  docless_architecture.py  docs_commands.py  enhanced_parser.py  implementation_roadmap.py  integration_examples.py  learning.py  memory_integration.py  module_isolation.py  preferences.py  project_context.py  scaffold_commands.py  schema_commands.py  schema_generation.py  scoped_cli.py  session_manager.py  sphinx_auto.py  task_commands.py  task_management.py  workflow_automation.py
projects/development/om/tests/: __init__.py  test_agent_scoping.py  test_context_injection_benchmark.py  test_sphinx_auto.py
projects/development/om/tests/benchmark/: __init__.py  data_models.py  evaluator.py  query_definitions.py  reporter.py  runner.py  suite.py
projects/intelligence/coherence/formal_contracts/: contract_language.py
projects/intelligence/coherence/src/coherence/: __init__.py  cli.py  integration.py  monitor.py  validator.py  validator_with_contracts.py
projects/intelligence/core/knowledge/knowledge/: context.db
projects/intelligence/core/onboarding/: pyproject.toml
projects/intelligence/core/onboarding/src/onboarding/: __init__.py  agent_onboarding_system.py  codebase_navigator.py  command_trainer.py  progress_models.py  progress_tracker.py  workspace_mapper.py
projects/intelligence/core/quality/: pyproject.toml
projects/intelligence/core/quality/src/quality/: __init__.py  code_analyzer.py  quality_gate_system.py  quality_metrics.py
projects/intelligence/core/validation/: pyproject.toml
projects/intelligence/core/validation/src/: __init__.py  auto_halt_controller.py  coherence_scorer.py  context_validator.py  contradiction_detector.py  halt_controller.py  logical_coherence_validator.py  models.py  om_integration.py  pattern_matcher.py  prerequisite_checker.py  token_analyzer.py  token_efficiency_optimizer.py  validation_models.py
projects/intelligence/core/validation/src/integration/: __init__.py  om_hooks.py  om_integration.py
projects/interfaces/axiom/backend/: pyproject.toml
projects/parsing/code-parser/src/code_parser/: __init__.py  interpreter.py  python_parser.py  sphinx_parser.py
projects/parsing/docs-parser/src/docs_parser/: __init__.py  batch_parser.py  cli.py  python_stdlib.py  search.py  universal_parser.py
projects/tools/docs/: pyproject.toml
projects/tools/docs/src/docs/: __init__.py  documentation_generator.py
projects/tools/workspace-knowledge/: pyproject.toml  test_knowledge.db
projects/tools/workspace-knowledge/src/knowledge/: __init__.py
projects/trading/momo-funding/trading_bot/: analyze_expansion_risk.py  analyze_real_correlations.py  check_binance_api_access.py  comprehensive_backtest.py  debug_symbol_discovery.py  dynamic_market_discovery.py  optimal_trading_system.py  parameter_optimization.py  run_backtest.py  scientific_trader.py  test_altcoin_strategy.py.disabled  test_backtesting_basic.py.disabled  test_binance_data_quality.py.disabled  test_simple_integration.py.disabled  test_system.py.disabled
projects/trading/momo-funding/trading_bot/backtesting/: __init__.py  coherent_backtester.py  historical_data_engine.py  market_simulator.py  (+2 more)
projects/trading/revenue/: pyproject.toml
projects/trading/revenue/src/revenue/: __init__.py  background_trader.py  backtest_real.py  check_account.py  coherent_trading_demo.py  coherent_trading_system.py  daemon_trader.py  deploy_trading_system.py  mathematical_framework.py  realistic_backtest.py  run_backtest.py  run_trading_system.py  simple_backtest.py
src/lovespace/: __init__.py
(+160 files in other folders)
