[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovespace"
version = "0.1.0"
description = "LoveSpace - Coherent development environment for AI collaboration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/lovespace"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.uv.workspace]
members = [
    "projects/intelligence/core/knowledge",
    "projects/intelligence/core/protocols",
    "projects/intelligence/core/validation", 
    "projects/intelligence/core/onboarding",
    "projects/intelligence/core/quality",
    "projects/intelligence/coherence",
    "projects/intelligence/momo/interface",
    "projects/intelligence/momo/cycles",
    "projects/parsing/docs-parser",
    "projects/parsing/code-parser",
    "projects/development/om",
    "projects/interfaces/axiom/backend",
    "projects/trading/momo-funding",
    "projects/trading/revenue",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit
]
ignore = ["S101", "E501"]  # Allow assert statements, line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["lovespace"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["projects"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff.lint.flake8-bandit]
hardcoded-tmp-directory = ["/tmp", "/var/tmp", "/dev/shm"]