[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workspace-knowledge"
version = "0.1.0"
description = "Code knowledge storage and retrieval system"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]