[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revenue"
version = "0.1.0"
description = "Revenue generation trading system"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]