[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "validation"
version = "0.1.0"
description = "Coherence validation and logical consistency checking"
dependencies = []

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]